--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,36 +1,88 @@
 trigger:
-- main
+  - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: "ubuntu-latest"
 
 variables:
-  nodeVersion: '18.x'
+  dockerRegistryServiceConnection: "ACR-SERVICE-CONNECTION"
+  kubernetesServiceConnection: "AKS-SERVICE-CONNECTION"
+  imageRepository: "angular-nodejs-example"
+  containerRegistry: "myacr.azurecr.io"
+  dockerfilePath: "$(Build.SourcesDirectory)/Dockerfile"
+  tag: "$(Build.BuildId)"
+  namespace: "dev"
 
-steps:
-# Install Node
-- task: NodeTool@0
-  inputs:
-    versionSpec: '$(nodeVersion)'
-  displayName: 'Install Node.js'
+stages:
+  - stage: Build
+    displayName: Build and Push
+    jobs:
+      - job: Build
+        displayName: Build and Push Image
+        steps:
+          - task: Docker@2
+            displayName: Build and push image
+            inputs:
+              containerRegistry: "$(dockerRegistryServiceConnection)"
+              repository: "$(imageRepository)"
+              command: "buildAndPush"
+              Dockerfile: "$(dockerfilePath)"
+              tags: |
+                $(tag)
 
-# Build Backend
-- script: |
-    cd backend
-    npm install
-    npm test || echo "No tests"
-  displayName: 'Backend Build & Test'
+  - stage: Deploy
+    displayName: Deploy to AKS
+    dependsOn: Build
+    jobs:
+      - job: Deploy
+        displayName: Deploy manifests
+        steps:
+          - task: Kubernetes@1
+            displayName: Ensure namespace
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "$(kubernetesServiceConnection)"
+              command: "apply"
+              useConfigurationFile: true
+              configuration: "k8s/namespace.yaml"
 
-# Build Frontend
-- script: |
-    cd frontend
-    npm install
-    npm install -g @angular/cli
-    ng build --configuration=production
-  displayName: 'Angular Build'
+          - task: Kubernetes@1
+            displayName: Apply deployment
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "$(kubernetesServiceConnection)"
+              namespace: "$(namespace)"
+              command: "apply"
+              useConfigurationFile: true
+              configuration: "k8s/deployment.yaml"
 
-# Publish Artifact
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: 'frontend/dist'
-    ArtifactName: 'angular-build'
+          - task: Kubernetes@1
+            displayName: Apply service
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "$(kubernetesServiceConnection)"
+              namespace: "$(namespace)"
+              command: "apply"
+              useConfigurationFile: true
+              configuration: "k8s/service.yaml"
+
+          - task: Kubernetes@1
+            displayName: Apply ingress
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "$(kubernetesServiceConnection)"
+              namespace: "$(namespace)"
+              command: "apply"
+              useConfigurationFile: true
+              configuration: "k8s/ingress.yaml"
+
+          - task: Kubernetes@1
+            displayName: Update image
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "$(kubernetesServiceConnection)"
+              namespace: "$(namespace)"
+              command: "set"
+              arguments: >-
+                image deployment/angular-nodejs-example
+                angular-nodejs-example=$(containerRegistry)/$(imageRepository):$(tag)
