--- a/.github/workflows/master_angularnodejs100(dev).yml
+++ b/.github/workflows/master_angularnodejs100(dev).yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - angularnodejs100(dev)
+ name: Build and deploy Node.js app to Azure Web App - angularnodejs100(dev)
 
 on:
   push:
@@ -14,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Node.js version
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
-        node-version: '14.x'
+        node-version: '18.x'   # ✅ Use LTS, not 14
 
     - name: npm install, build, and test
       run: |
@@ -28,7 +25,7 @@ jobs:
         npm run test --if-present
 
     - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: node-app
         path: .
@@ -42,11 +39,11 @@ jobs:
 
     steps:
     - name: Download artifact from build job
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: node-app
 
-    - name: 'Deploy to Azure Web App'
+    - name: Deploy to Azure Web App
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
